routing modified,apiary licence design done and user profile design done

--- a/greenly/src/app/components/login/login.component.html
+++ b/greenly/src/app/components/login/login.component.html
@@ -56,7 +56,7 @@
                     </form>
                 </div>
                 <h3 class="fs-6 mt-3 mx-auto fw-bold">Don't have an account? <span class="text-success cursor-pointer"
-                        routerLink="/app/guest/register">Sign Up Now!</span></h3>
+                        routerLink="/app/system/register">Sign Up Now!</span></h3>
             </div>
         </div>
     </div>
