--- a/greenly/src/app/components/register/register.component.html
+++ b/greenly/src/app/components/register/register.component.html
@@ -107,7 +107,7 @@
                         <button class="btn-main w-75 d-block mx-auto rounded-5" [disabled]="registerForm.invalid">Sign Up</button>
                     </form>
                     <h3 class="fs-6 mt-3 mx-auto fw-bold text-center">Already have an account? <span
-                            class="text-success cursor-pointer" routerLink="/login">LogIn Here</span></h3>
+                            class="text-success cursor-pointer" routerLink="/app/system/login">LogIn Here</span></h3>
 
                 </div>
             </div>
