--- a/greenly/src/app/components/shop/shop.component.html
+++ b/greenly/src/app/components/shop/shop.component.html
@@ -20,7 +20,7 @@
                             <span class="text-white position-absolute favorite-circle">
                                 <i class="fa-regular fa-heart text-main fs-3"></i>
                             </span>
-                            <div class="product-body" routerLink="/product-details">
+                            <div class="product-body" routerLink="/app/system/product-details">
                                 <img src="./assets/e8413db6e03814d36461d2211cfbdba5.jpeg"
                                 class="card-img-top rounded-bottom-2" alt="product-img">
                             <div class="card-body">
