--- a/greenly/src/app/components/apiary-licence/apiary-licence.component.html
+++ b/greenly/src/app/components/apiary-licence/apiary-licence.component.html
@@ -1,6 +1,102 @@
 <section>
     <div class="container py-5">
-        <h1 class="special-font text-center">Apiary licence Application</h1>
-        <h2>sss</h2>
+        <h1 class="special-font text-center mb-3">Apiary licence Application</h1>
+        <form>
+            <h4 class="special-font text-main position-relative fs-5">Personal Information</h4>
+        <div class="row mb-4 justify-content-center">
+            <div class="col-md-6">
+                <div class="mb-3">
+                    <label for="userName" class="form-label special-font fs-4">Full Name</label>
+                    <input type="text" class="form-control border-success" id="userName" placeholder="Seif Muhammed">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="mb-3">
+                    <label for="phone" class="form-label special-font fs-4">Phone Number</label>
+                    <input type="tel" class="form-control border-success" id="phone" placeholder="Seif">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="mb-3">
+                    <label for="email" class="form-label special-font fs-4">Email</label>
+                    <input type="email" class="form-control border-success" id="email" placeholder="Seif@xyz.com">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="mb-3">
+                    <label for="userAddress" class="form-label special-font fs-4">Address</label>
+                    <input type="text" class="form-control border-success" id="userAddress"
+                        placeholder="221B Backer street">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="mb-3">
+                    <label for="experience" class="form-label special-font fs-4">Experience in beekeeping <span
+                            class="special-span text-secondary">in years</span></label>
+                    <input type="number" class="form-control border-success" id="experience"
+                        placeholder="1">
+                </div>
+            </div>
+        </div>
+        <h4 class="special-font text-main position-relative fs-5">Apiary Licence Information</h4>
+        <div class="row justify-content-center mb-3">
+            <div class="col-md-4">
+                <div class="mb-3">
+                    <label for="requiredArea" class="form-label special-font fs-4">Required Area <span
+                            class="special-span text-secondary">in meter square</span></label>
+                    <input type="number" class="form-control border-success" id="requiredArea" placeholder="3000">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="mb-3">
+                    <label for="requiredLocation" class="form-label special-font fs-4">Required Location</label>
+                    <input type="text" class="form-control border-success" id="requiredLocation"
+                        placeholder="221B Backer street">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="mb-3">
+                    <label for="plants" class="form-label special-font fs-4">Surrounding plants type</label>
+                    <input type="text" class="form-control border-success" id="plants" placeholder="Plants kwisa">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="mb-3">
+                    <label for="beeColonies" class="form-label special-font fs-4">Number of planned bee colonies</label>
+                    <input type="number" class="form-control border-success" id="beeColonies" placeholder="20000">
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="mb-3">
+                  <label for="workPlan" class="form-label special-font fs-4">Proposed work plan <span
+                    class="special-span text-secondary">1500 charcters maximum</span></label>
+                  <textarea class="form-control border-success" id="workPlan" placeholder="" rows="5"(input)="countCharacters()"[maxLength]="1500" [(ngModel)]="workPlanText" name="workPlan"></textarea>
+                  <div class="text-end mt-1">
+                    <small class="text-muted"><span class="text-danger">{{ charactersLeft }}</span> characters left</small>
+                  </div>
+                </div>
+              </div>
+              
+        </div>
+        <h4 class="special-font text-main position-relative fs-5">Required Documents</h4>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="mb-3">
+                    <label for="nationality" class="form-label special-font fs-4">A copy of the national ID card or
+                        passport</label>
+                    <input type="file" class="file form-control border-success mb-3 bg-light" id="nationality"
+                        placeholder="Upload documents">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="mb-3">
+                    <label for="nationality" class="form-label special-font fs-4">Documents demonstrating applicant's experience in beekeeping</label>
+                    <input type="file" class="file form-control border-success mb-3 bg-light" id="nationality"
+                        placeholder="Upload documents">
+                </div>
+            </div>
+        </div>
+        <button class="btn btn-success w-25 d-block px-3 py-2 mx-auto my-5">Apply</button>
+        </form>
     </div>
 </section>
