--- a/greenly/src/app/components/user-profile/user-profile.component.css
+++ b/greenly/src/app/components/user-profile/user-profile.component.css
@@ -1,8 +1,9 @@
-h4{
+h4 {
     font-family: Open Sans, sans-serif;
     font-weight: 500;
 }
-h4::before{
+
+h4::before {
     content: "";
     font-size: 50px;
     color: #177E39;
@@ -14,7 +15,72 @@ h4::before{
     background-color: #177E39;
 }
 
-.eye-password{
+.eye-password {
     right: 5px;
     top: 62%;
 }
+
+.inner {
+    background-color: #EEEEEE;
+}
+
+.dropdown-toggle::after {
+    display: none !important;
+}
+
+.dropdown-toggle {
+    padding: 0;
+    height: auto;
+    border: none !important;
+    box-shadow: none !important;
+    background-color: transparent;
+}
+
+.custom-dropdown-menu {
+    left: auto !important;
+    right: 0 !important;
+    min-width: max-content;
+}
+
+.dropdown {
+    top: -30%;
+    right: 1%;
+}
+
+.upload-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.custom-file-upload {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #177E39;
+    color: white;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    font-size: 28px;
+    transition: background-color 0.3s;
+}
+
+.custom-file-upload:hover {
+    background-color: #146c31;
+}
+
+.upload-text {
+    font-weight: bold;
+    font-size: 18px;
+    color: #333;
+}
+
+.preview-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    display: block;
+  }
