--- a/greenly/src/app/components/user-profile/user-profile.component.html
+++ b/greenly/src/app/components/user-profile/user-profile.component.html
@@ -1,28 +1,131 @@
 <section>
     <div class="container py-5">
         <h1 class="special-font text-center">Profile</h1>
-        <h4 class="text-main position-relative fs-5">Personal Information</h4>
-        <div class="row justify-content-center g-4">
-            <div class="col-md-3">
-                <div class="mb-3">
-                    <label for="userName" class="form-label fw-bold special-font fs-4">User Name</label>
-                    <input type="text" class="form-control" id="userName" placeholder="Seif">
+        <div class="personal-info mb-3">
+            <div class="d-flex justify-content-between align-items-center my-4">
+                <h4 class="text-main position-relative fs-5">Personal Information</h4>
+                <span class="special-font text-main cursor-pointer fs-5 text-decoration-underline">Edit Profile</span>
+            </div>              
+            <div class="row justify-content-center g-4">
+                <div class="col-md-6">
+                    <div class="mb-3">
+                        <label for="userName" class="form-label fw-bold special-font fs-4">User Name</label>
+                        <input type="text" class="form-control" id="userName" placeholder="Seif">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="mb-3 position-relative">
+                        <span (click)="togglePasswordVisibility()"
+                            class="cursor-pointer position-absolute eye-password"><i class="fa-solid"
+                                [ngClass]="isPasswordVisible ? 'fa-eye-slash text-main' : 'fa-eye text-main'"></i></span>
+                        <label for="password" class="form-label fw-bold special-font fs-4">Password</label>
+                        <input [type]="isPasswordVisible ? 'text' : 'password'" class="form-control" id="password"
+                            placeholder="xYz123@s">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="mb-3">
+                        <label for="phoneNumber" class="form-label fw-bold special-font fs-4">Phone Number</label>
+                        <input type="tel" class="form-control" id="phoneNumber" placeholder="01xxxxxxxxx">
+                    </div>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="mb-3 position-relative">
-                    <span (click)="togglePasswordVisibility()" class="cursor-pointer position-absolute eye-password"><i class="fa-solid"
-                        [ngClass]="isPasswordVisible ? 'fa-eye-slash text-main' : 'fa-eye text-main'"></i></span>
-                    <label for="password" class="form-label fw-bold special-font fs-4">Password</label>
-                    <input [type]="isPasswordVisible ? 'text' : 'password'" class="form-control" id="password" placeholder="xYz123@s">
+        </div>
+        <div class="user-posts mt-5 mb-3">
+            <h4 class="text-main position-relative fs-5">My Posts</h4>
+            <div class="row g-3 mt-3">
+                <div class="col-md-6">
+                    <div class="inner p-3 rounded-3 text-center position-relative">
+                        <div class="dropdown position-absolute m-2">
+                            <button class="btn fs-1 text-main btn-sm dropdown-toggle" type="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                ...
+                            </button>
+                            <ul class="dropdown-menu custom-dropdown-menu text-center">
+                                <li class="cursor-pointer border-bottom"><a class="dropdown-item">Edit <i class="fa-solid fa-pen text-success"></i></a></li>
+                                <li class="cursor-pointer"><a class="dropdown-item">Delete <i class="fa-solid fa-trash text-danger"></i></a></li>
+                            </ul>
+                        </div>
+                        <div class="d-flex align-items-center justify-content-between pe-5">
+                            <div class="user-info d-flex justify-content-center align-items-center gap-1">
+                                <div class=" fs-5">
+                                    <img src="./assets/user-circle-1-svgrepo-com.svg" alt="user-img"
+                                        class="rounded-circle" width="30px" height="30px">
+                                </div>
+                                <h2 class="fs-6 pt-2  fw-semibold">Seif Muhammed</h2>
+                            </div>
+                            <div class="date">
+                                <span class="pt-2 fw-semibold text-secondary">Today</span>
+                            </div>
+                        </div>
+                        <div class="post-content my-3">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, magni?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="inner p-3 rounded-3 text-center position-relative">
+                        <div class="dropdown position-absolute m-2">
+                            <button class="btn fs-1 text-main btn-sm dropdown-toggle" type="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                ...
+                            </button>
+                            <ul class="dropdown-menu custom-dropdown-menu text-center">
+                                <li class="cursor-pointer border-bottom"><a class="dropdown-item">Edit <i class="fa-solid fa-pen text-success"></i></a></li>
+                                <li class="cursor-pointer"><a class="dropdown-item">Delete <i class="fa-solid fa-trash text-danger"></i></a></li>
+                            </ul>
+                        </div>
+                        <div class="d-flex align-items-center justify-content-between pe-5">
+                            <div class="user-info d-flex justify-content-center align-items-center gap-1">
+                                <div class=" fs-5">
+                                    <img src="./assets/user-circle-1-svgrepo-com.svg" alt="user-img"
+                                        class="rounded-circle" width="30px" height="30px">
+                                </div>
+                                <h2 class="fs-6 pt-2  fw-semibold">Seif Muhammed</h2>
+                            </div>
+                            <div class="date">
+                                <span class="pt-2 fw-semibold text-secondary">Today</span>
+                            </div>
+                        </div>
+                        <div class="post-content my-3">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, magni?</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="mb-3">
-                    <label for="phoneNumber" class="form-label fw-bold special-font fs-4">Phone Number</label>
-                    <input type="tel" class="form-control" id="phoneNumber" placeholder="01xxxxxxxxx">
-                </div>
-            </div>
+        </div>
+        <div class="user-orders mt-5">
+            <h4 class="text-main position-relative fs-5">My Orders</h4>
+            <table class="table table-light border border-1 rounded-3 table-hover mt-3">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">First</th>
+                        <th scope="col">Last</th>
+                        <th scope="col">Handle</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>mdo</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>fat</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>John</td>
+                        <td>Doe</td>
+                        <td>social</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </section>
