aos animations let's gooo

--- a/greenly/src/app/components/home/home.component.html
+++ b/greenly/src/app/components/home/home.component.html
@@ -50,7 +50,7 @@
 <section class="about-us p-5">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="fade-right">
                 <div class="left-about-content p-5 pe-0 position-relative">
                     <h4 class="text-main fs-6 position-absolute">About Us</h4>
                     <p class="special-font about-main-text">
@@ -63,10 +63,10 @@
             </div>
             <div class="col-md-6">
                 <div about-imgs class="d-flex gap-2">
-                    <div class="img-1">
+                    <div class="img-1" data-aos="fade-up">
                         <img src="./assets/Image-1.png" class="w-100" />
                     </div>
-                    <div class="img-2 pt-5">
+                    <div class="img-2 pt-5" data-aos="fade-down">
                         <img src="./assets/Image.png" class="w-100" />
                     </div>
                 </div>
@@ -76,40 +76,40 @@
 </section>
 <section class="our-services p-5 mb-5">
     <div class="container">
-        <div class="position-relative">
+        <div class="position-relative" data-aos="slide-right">
             <h4 class="text-main fs-6 position-absolute top-0">Our Services</h4>
             <h3 class="special-font w-75 ps-5 pt-3">We provide the best solutions for a thriving and sustainable natural world.</h3>
         </div>
         <div class="row px-5 g-4 justify-content-center">
-            <div class="col-md-4">
+            <div class="col-md-4" data-aos="fade-right">
                 <div class="inner rounded-3 py-5 px-3">
                     <img src="./assets/farmer-working-svgrepo-com.svg" alt="Farmer Working" width="70px" height="70px" />
                     <h5 class="special-font mt-5 fs-2">Farmers</h5>
                     <p>We lead change with smart solutions that accelerate electric vehicle adoption, fostering a cleaner environment and a more sustainable future of transport.</p>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" data-aos="fade-down">
                 <div class="inner rounded-3 py-5 px-3">
                     <img src="./assets/car-side-svgrepo-com.svg" alt="Electric Cars" width="70px" height="70px" />
                     <h5 class="special-font mt-5 fs-2">Electric Cars</h5>
                     <p>We assist factories in adopting sustainable methods that boost operational efficiency and significantly reduce their overall environmental footprint.</p>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" data-aos="fade-left">
                 <div class="inner rounded-3 py-5 px-3">
                     <img src="./assets/factories-factory-svgrepo-com.svg" alt="Factories Support" width="70px" height="70px" />
                     <h5 class="special-font mt-5 fs-2">Factories</h5>
                     <p class="pb-4">We help factories transition to sustainable practices, enhancing efficiency while reducing environmental impact.</p>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" data-aos="fade-up">
                 <div class="inner rounded-3 py-5 pb-4 px-3">
                     <img src="./assets/dollar-finance-money-4-svgrepo-com.svg" alt="Loan Application" width="70px" height="70px" />
                     <h5 class="special-font mt-5 fs-2">Apply on a loan</h5>
                     <p class="pb-4">We empower farmers with access to agricultural loans through smart solutions, supporting sustainable farming, improved productivity, and stronger communities in rural agricultural areas.</p>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" data-aos="fade-up">
                 <div class="inner rounded-3 py-5 px-3">
                     <img src="./assets/honey-svgrepo-com.svg" alt="Apiary license" width="70px" height="70px" />
                     <h5 class="special-font mt-5 fs-2">Apply on apiary license</h5>
