--- a/greenly/src/app/components/product-details/product-details.component.html
+++ b/greenly/src/app/components/product-details/product-details.component.html
@@ -4,34 +4,25 @@
             <div class="col-md-4">
                 <div class="product-slider">
                     <owl-carousel-o [options]="productSlider">
-                        <ng-template carouselSlide>
-                            <img src="./assets/e8413db6e03814d36461d2211cfbdba5.jpeg" alt="Slide 1"
-                                class="w-100 rounded-2" />
-                        </ng-template>
-                        <ng-template carouselSlide>
-                            <img src="./assets/e8413db6e03814d36461d2211cfbdba5.jpeg" alt="Slide 1"
-                                class="w-100 rounded-2" />
-                        </ng-template>
-                        <ng-template carouselSlide>
-                            <img src="./assets/e8413db6e03814d36461d2211cfbdba5.jpeg" alt="Slide 1"
-                                class="w-100 rounded-2" />
-                        </ng-template>
-                    </owl-carousel-o>
+                        @for (image of productDetails.images; track $index) {
+                            <ng-template carouselSlide>
+                                <img [src]="image" class="w-100">
+                            </ng-template>
+                        }
+                      </owl-carousel-o>
                 </div>
             </div>
             <div class="col-md-8">
                 <div class="top-content d-flex justify-content-between align-items-center">
-                    <h1 class="special-font">Compost</h1>
+                    <h1 class="special-font">{{productDetails.name}}</h1>
                     <div class="product-price fs-5 fw-semibold">
                         <span class="text-secondary mx-3"><del>500</del></span>
-                        <span class="text-main">125</span>
+                        <span class="text-main">{{productDetails.price}}</span>
                     </div>
                 </div>
                 <div class="product-description w-75 my-4">
                     <p class="text-secondary fw-semibold">
-                        Compost is rich, natural soil made from decomposed organic waste. It enhances soil health,
-                        supports
-                        plant growth, and reduces environmental impact.
+                        {{productDetails.shortdescription}}
                     </p>
                 </div>
                 <div class="add-to-cart-btn mt-5 pt-5 d-flex justify-content-between align-items-center">
@@ -62,20 +53,7 @@
         <div class="about-product my-5 p-2">
             <h4 class="text-main fs-6 position-relative">About product</h4>
             <p class="lead">
-                When choosing a factory site, consider its proximity to raw materials and transportation networks to
-                reduce logistics costs and ensure a smooth supply chain.
-                Ensure the land is zoned for industrial use and has the necessary permits and approvals from local
-                authorities. This helps avoid legal complications and ensures compliance with local regulations.
-                Check if the site has adequate infrastructure, including electricity, water supply, sewage systems, and
-                communication services essential for factory operations.
-                Evaluate the environmental impact of the factory’s activities and implement measures to meet
-                environmental regulations, minimizing harm to the surrounding area.
-                Consider the availability of skilled labor in the area to ensure a stable and competent workforce for
-                efficient production.
-                Choose a location with room for expansion to accommodate future growth and increase production capacity
-                when needed.
-                Maintain positive community relations by minimizing disruptions and adhering to local laws for smooth
-                and sustainable business operations.
+                {{productDetails.longdescription}}
             </p>
         </div>
     </div>
