--- a/greenly/src/app/components/shop/shop.component.html
+++ b/greenly/src/app/components/shop/shop.component.html
@@ -1,19 +1,23 @@
 <section>
     <div class="container-fluid p-0">
       <div class="bg-main p-5 text-center text-white">
-        <h1 class="special-font mb-3">Shop</h1>
+        @if (shopData) {
+        <h1 class="special-font mb-3">{{shopData.categoryName}}</h1>
+        }
         <ul class="list-unstyled pt-4 d-flex flex-wrap justify-content-center gap-5">
           @for (category of categoriesData; track category._id) {
-            <li class="special-font fs-4 cursor-pointer" [id]="category._id">{{category.name}}</li>
+            <li class="special-font fs-4 cursor-pointer" [id]="category._id" (click)="getProductsByCategory(category._id)">
+              {{category.name}}
+            </li>
           }
         </ul>
       </div>
     </div>
   
     <div class="container py-5">
-      @for (shopItem of shopData; track shopItem.categoryId) {
-        <div class="shop-category mb-5">  
-          @for (subCategory of shopItem.subCategories; track subCategory.subCategoryId) {
+      @if (shopData) {
+        @for (subCategory of shopData.subCategories; track subCategory.subCategoryId) {
+          <div class="shop-category mb-5">
             <h4 class="mt-4 mb-3 text-main fs-6 position-relative">{{ subCategory.subCategoryName }}</h4>
             <div class="row mt-3 g-4">
               @for (product of subCategory.products; track product._id) {
@@ -53,8 +57,8 @@
                 </div>
               }
             </div>
-          }
-        </div>
+          </div>
+        }
       }
     </div>
   </section>
