--- a/greenly/src/app/components/not-found/not-found.component.html
+++ b/greenly/src/app/components/not-found/not-found.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="text-center my-2">
             <h1 class="text-secondary fw-bold fs-5 mb-3">Opps! Page Not Found</h1>
-            <button class="btn btn-success px-3 py-1" routerLink="/home">Back to home</button>
+            <button class="btn btn-success px-3 py-1" routerLink="/app/system/home">Back to home</button>
         </div>
     </div>
 </section>
