--- a/greenly/src/app/components/product-details/product-details.component.html
+++ b/greenly/src/app/components/product-details/product-details.component.html
@@ -43,7 +43,7 @@
                             3.3
                         </span>
                     </div>
-                    <button class="btn rounded-5 btn-special px-4">
+                    <button class="btn rounded-5 btn-special px-4" (click)="addProductToCart(productDetails._id)">
                         <img src="./assets/cart-plus-svgrepo-com.svg" width="25px" height="25px" alt="Add to Cart" />
                         Add to cart
                     </button>
