--- a/greenly/src/app/components/shop/shop.component.html
+++ b/greenly/src/app/components/shop/shop.component.html
@@ -34,24 +34,23 @@
                             <h3 class="card-title special-font">{{ product.name }}</h3>
                             <div>
                               <span class="special-font fs-3 px-2 text-secondary">
-                                <del>{{ product.price }}</del>
+                                <del class="deleted-price">{{ product.price | currency : "GBP" }}</del>
                               </span>
-                              <span class="special-font fs-3">{{ product.price }}</span>
+                              <span class="special-font fs-3">{{ product.price | currency : "GBP" }}</span>
                             </div>
                           </div>
                           <p class="card-text fw-semibold">{{ product.shortdescription }}</p>
-                          <div class="bottom-content d-flex justify-content-between align-items-center mt-4">
                             <span class="text-warning fw-semibold">
                               <i class="fa-solid fa-circle-exclamation"></i> Only
                               <span class="text-black">{{ product.stock }}</span> left in stock
                             </span>
-                            <span class="special-font fs-3 text-main cart-holder rounded-3 cursor-pointer">
-                              <img src="./assets/cart-plus-svgrepo-com.svg" alt="cart-icon" class="cart-icon" width="35px" height="35px" fill="#177E39">
-                            </span>
-                          </div>
                         </div>
                       </div>
-  
+                      <div class="d-flex justify-content-end p-3">
+                        <span class="special-font fs-3 text-main cart-holder rounded-3 cursor-pointer" (click)="addProductToCart(product._id)">
+                          <img src="./assets/cart-plus-svgrepo-com.svg" alt="cart-icon" class="cart-icon" width="35px" height="35px" fill="#177E39">
+                        </span>
+                      </div>
                     </div>
                   </div>
                 </div>
