--- a/greenly/src/app/components/cart/cart.component.html
+++ b/greenly/src/app/components/cart/cart.component.html
@@ -4,11 +4,13 @@
             <div class="cart-head d-flex align-items-center justify-content-between">
                 <div>
                     <h1 class="fs-1 fw-bold special-font">Shop Cart:</h1>
-                    <h3 class="text-main fw-bold">Total cart price: {{cartData.totalPrice}}</h3>
+                    <h3 class="text-main fw-bold">Total cart price: {{cartData.totalPrice | currency: "GBP"}}</h3>
                 </div>
-                <div class="clear-cart cursor-pointer text-danger">
-                    <h3 class="fs-5">Empty Cart <i class="fa-solid fa-trash-can"></i></h3>
-                </div>
+                @if(cartData.products.length > 0){
+                    <div class="clear-cart cursor-pointer text-danger">
+                        <h3 class="fs-5">Empty Cart <i class="fa-solid fa-trash-can"></i></h3>
+                    </div>
+                }
             </div>
             @for (product of cartData.products; track product._id) {
                 <div class="row mt-3 border-bottom border-3 pb-3">
@@ -50,7 +52,9 @@
             }@empty {
                 <h3 class="text-danger text-center special-font">No Products Added Yet!</h3>
             }
-            <button class="btn-main ms-auto d-block rounded-3 px-5 my-3">Check Out</button>
+            @if (cartData.products.length > 0) {
+                <button class="btn-main ms-auto d-block rounded-3 px-5 my-3">Check Out</button>
+              }
         } 
     </div>
 </section>
