--- a/greenly/src/app/components/blog/blog.component.css
+++ b/greenly/src/app/components/blog/blog.component.css
@@ -1,3 +1,17 @@
-.inner{
+.inner {
     background-color: #EEEEEE;
-}
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .col-md-6 {
+    display: flex;
+  }
+  
