favorites toggle icon done icon change remaining

--- a/greenly/src/app/components/navbar/navbar.component.html
+++ b/greenly/src/app/components/navbar/navbar.component.html
@@ -34,7 +34,7 @@
             <span class="bg-main position-absolute cart-counter">0</span>
             <img src="./assets/cart-plus-svgrepo-com.svg" width="30px" height="30px"/>Cart
           </button>
-          <button class="btn btn-success rounded-3 px-3" type="button" routerLink="/app/system/login" (click)="logOut()">Log Out<img src="./assets/logout-svgrepo-com.svg" style="filter: invert(1);" width="25px" height="25px"></button>
+          <button class="btn btn-success rounded-3 px-3" type="button" routerLink="/app/system/home" (click)="logOut()">Log Out<img src="./assets/logout-svgrepo-com.svg" style="filter: invert(1);" width="25px" height="25px"></button>
         }@else{
           <div class="nav-buttons me-4">
             <button class="btn btn-success rounded-3 px-3 py-1" type="button" routerLink="/app/system/login">Log In <img src="./assets/arrow-up-right-svgrepo-com.svg" style="filter: invert(1);" width="25px" height="25px"></button>
