--- a/greenly/src/app/components/shop/shop.component.html
+++ b/greenly/src/app/components/shop/shop.component.html
@@ -1,64 +1,66 @@
 <section>
-    <div class="container-fluid p-0">
-      <div class="bg-main p-5 text-center text-white">
-        @if (shopData) {
-        <h1 class="special-font mb-3">{{shopData.categoryName}}</h1>
-        }
-        <ul class="list-unstyled pt-4 d-flex flex-wrap justify-content-center gap-5">
-          @for (category of categoriesData; track category._id) {
-            <li class="special-font fs-4 cursor-pointer" [id]="category._id" (click)="getProductsByCategory(category._id)">
-              {{category.name}}
-            </li>
-          }
-        </ul>
-      </div>
-    </div>
-  
-    <div class="container py-5">
+  <div class="container-fluid p-0">
+    <div class="bg-main p-5 text-center text-white">
       @if (shopData) {
-        @for (subCategory of shopData.subCategories; track subCategory.subCategoryId) {
-          <div class="shop-category mb-5">
-            <h4 class="mt-4 mb-3 text-main fs-6 position-relative">{{ subCategory.subCategoryName }}</h4>
-            <div class="row mt-3 g-4">
-              @for (product of subCategory.products; track product._id) {
-                <div class="col-md-4">
-                  <div class="card cursor-pointer h-100">
-                    <div class="inner position-relative">
-                      <span class="text-white position-absolute favorite-circle">
-                        <i class="fa-regular fa-heart text-main fs-3"></i>
+      <h1 class="special-font mb-3">{{shopData.categoryName}}</h1>
+      }
+      <ul class="list-unstyled pt-4 d-flex flex-wrap justify-content-center gap-5">
+        @for (category of categoriesData; track category._id) {
+        <li class="special-font fs-4 cursor-pointer" [id]="category._id" (click)="getProductsByCategory(category._id)">
+          {{category.name}}
+        </li>
+        }
+      </ul>
+    </div>
+  </div>
+
+  <div class="container py-5">
+    @if (shopData) {
+    @for (subCategory of shopData.subCategories; let subIndex = $index; track subIndex) {
+    <div class="shop-category mb-5">
+      <h4 class="mt-4 mb-3 text-main fs-6 position-relative">{{ subCategory.subCategoryName }}</h4>
+      <div class="row mt-3 g-4">
+        @for (product of subCategory.products; let prodIndex = $index; track prodIndex) {
+        <div class="col-md-4">
+          <div class="card cursor-pointer h-100">
+            <div class="inner position-relative">
+              <span class="text-white position-absolute favorite-circle" (click)="toggleProductFavorites(product._id)">
+                <i class="fa-heart text-main fs-3" [class.fa-solid]="isProductInFavorites(product._id)"
+                  [class.fa-regular]="!isProductInFavorites(product._id)"></i>
+              </span>
+              <div class="product-body" [routerLink]="['/app/system/product-details', product._id]">
+                <img [src]="product.imageCover" class="card-img-top rounded-bottom-2" alt="product-img">
+                <div class="card-body">
+                  <div class="top-content d-flex justify-content-between align-items-center my-2">
+                    <h3 class="card-title special-font">{{ product.name }}</h3>
+                    <div>
+                      <span class="special-font fs-3 px-2 text-secondary">
+                        <del class="deleted-price">{{ product.price | currency : "GBP" }}</del>
                       </span>
-                      <div class="product-body" [routerLink]="['/app/system/product-details', product._id]">
-                        <img [src]="product.imageCover" class="card-img-top rounded-bottom-2" alt="product-img">
-                        <div class="card-body">
-                          <div class="top-content d-flex justify-content-between align-items-center my-2">
-                            <h3 class="card-title special-font">{{ product.name }}</h3>
-                            <div>
-                              <span class="special-font fs-3 px-2 text-secondary">
-                                <del class="deleted-price">{{ product.price | currency : "GBP" }}</del>
-                              </span>
-                              <span class="special-font fs-3">{{ product.price | currency : "GBP" }}</span>
-                            </div>
-                          </div>
-                          <p class="card-text fw-semibold">{{ product.shortdescription }}</p>
-                            <span class="text-warning fw-semibold">
-                              <i class="fa-solid fa-circle-exclamation"></i> Only
-                              <span class="text-black">{{ product.stock }}</span> left in stock
-                            </span>
-                        </div>
-                      </div>
-                      <div class="d-flex justify-content-end p-3">
-                        <span class="special-font fs-3 text-main cart-holder rounded-3 cursor-pointer" (click)="addProductToCart(product._id)">
-                          <img src="./assets/cart-plus-svgrepo-com.svg" alt="cart-icon" class="cart-icon" width="35px" height="35px" fill="#177E39">
-                        </span>
-                      </div>
+                      <span class="special-font fs-3">{{ product.price | currency : "GBP" }}</span>
                     </div>
                   </div>
+                  <p class="card-text fw-semibold">{{ product.shortdescription }}</p>
+                  <span class="text-warning fw-semibold">
+                    <i class="fa-solid fa-circle-exclamation"></i> Only
+                    <span class="text-black">{{ product.stock }}</span> left in stock
+                  </span>
                 </div>
-              }
+              </div>
+              <div class="d-flex justify-content-end p-3">
+                <span class="special-font fs-3 text-main cart-holder rounded-3 cursor-pointer"
+                  (click)="addProductToCart(product._id)">
+                  <img src="./assets/cart-plus-svgrepo-com.svg" alt="cart-icon" class="cart-icon" width="35px"
+                    height="35px" fill="#177E39">
+                </span>
+              </div>
             </div>
           </div>
+        </div>
         }
-      }
+      </div>
     </div>
-  </section>
-  
+    }
+    }
+  </div>
+</section>
