favorites done 2 issues remaining : icon changing and i can't access the wishlist in the res coming from the delete api

--- a/greenly/src/app/components/shop/shop.component.html
+++ b/greenly/src/app/components/shop/shop.component.html
@@ -25,8 +25,7 @@
           <div class="card cursor-pointer h-100">
             <div class="inner position-relative">
               <span class="text-white position-absolute favorite-circle" (click)="toggleProductFavorites(product._id)">
-                <i class="fa-heart text-main fs-3" [class.fa-solid]="isProductInFavorites(product._id)"
-                  [class.fa-regular]="!isProductInFavorites(product._id)"></i>
+                <i class=" fa-regular fa-heart text-main fs-3"></i>
               </span>
               <div class="product-body" [routerLink]="['/app/system/product-details', product._id]">
                 <img [src]="product.imageCover" class="card-img-top rounded-bottom-2" alt="product-img">
