--- a/greenly/src/app/components/favorites/favorites.component.html
+++ b/greenly/src/app/components/favorites/favorites.component.html
@@ -1,44 +1,46 @@
 <section>
     <div class="container py-5">
         <h4 class="text-main fs-6 position-relative">Favorites</h4>
-        <div class="row mt-3 g-4">
-            <div class="col-md-4">
-                <div class="card cursor-pointer h-100">
-                    <div class="inner position-relative">
-                        <span class="text-white position-absolute favorite-circle">
-                            <i class="fa-solid fa-heart text-main fs-3"></i>
-                        </span>
-                        <div class="product-body" routerLink="/product-details">
-                            <img src="./assets/e8413db6e03814d36461d2211cfbdba5.jpeg"
-                            class="card-img-top rounded-bottom-2" alt="product-img">
-                        <div class="card-body">
-                            <div class="top-content d-flex justify-content-between align-items-center my-2">
-                                <h3 class="card-title special-font">Compost</h3>
-                                <div>
-                                    <span class="special-font fs-3 px-2 text-secondary"><del>125</del></span>
-                                    <span class="special-font fs-3">125</span>
+        @if(favoritesData){
+            <div class="row mt-3 g-4">
+                @for (product of favoritesData.products; track $index) {
+                    <div class="col-md-4">
+                        <div class="card cursor-pointer h-100">
+                            <div class="inner position-relative">
+                                <span class="text-white position-absolute favorite-circle" (click)="deleteFromFavorites(product.productId._id)">
+                                    <i class="fa-solid fa-heart text-main fs-3"></i>
+                                </span>
+                                <div class="product-body" routerLink="/product-details">
+                                    <img [src]="product.productId.imageCover"
+                                    class="card-img-top rounded-bottom-2" alt="product-img">
+                                <div class="card-body">
+                                    <div class="top-content d-flex justify-content-between align-items-center my-2">
+                                        <h3 class="card-title special-font">{{product.productId.name}}</h3>
+                                        <div>
+                                            <span class="special-font fs-3 px-2 text-secondary"><del>{{product.productId.price}}</del></span>
+                                            <span class="special-font fs-3">{{product.productId.price}}</span>
+                                        </div>
+                                    </div>
+                                    <p class="card-text fw-semibold">{{product.productId.shortdescription}}</p>
+                                    <div class="bottom-content d-flex justify-content-between align-items-center mt-4">
+                                        <span class="text-warning fw-semibold"><i
+                                                class="fa-solid fa-circle-exclamation"></i>
+                                            Only
+                                            <span class="text-black">{{product.productId.stock}}</span> left in stock</span>
+                                        <span class="special-font fs-3 text-main cart-holder rounded-3 cursor-pointer">
+                                            <img src="./assets/cart-plus-svgrepo-com.svg" alt="cart-icon" class="cart-icon"
+                                                width="35px" height="35px" fill="#177E39">
+                                        </span>
+                                    </div>
+                                </div>
                                 </div>
                             </div>
-                            <p class="card-text fw-semibold">Compost is rich, natural soil made from decomposed
-                                organic
-                                waste. It enhances soil health, supports plant growth, and reduces environmental
-                                impact.
-                            </p>
-                            <div class="bottom-content d-flex justify-content-between align-items-center mt-4">
-                                <span class="text-warning fw-semibold"><i
-                                        class="fa-solid fa-circle-exclamation"></i>
-                                    Only
-                                    <span class="text-black">3</span> left in stock</span>
-                                <span class="special-font fs-3 text-main cart-holder rounded-3 cursor-pointer">
-                                    <img src="./assets/cart-plus-svgrepo-com.svg" alt="cart-icon" class="cart-icon"
-                                        width="35px" height="35px" fill="#177E39">
-                                </span>
-                            </div>
-                        </div>
                         </div>
                     </div>
-                </div>
+                }@empty {
+                    <h2 class="text-danger text-center special-font fw-bold">No items added to favorites yet</h2>
+                }
             </div>
-        </div>
+        }
     </div>
 </section>
