--- a/greenly/src/app/components/shop/shop.component.html
+++ b/greenly/src/app/components/shop/shop.component.html
@@ -16,11 +16,11 @@
 
   <div class="container py-5">
     @if (shopData) {
-    @for (subCategory of shopData.subCategories; let subIndex = $index; track subIndex) {
+    @for (subCategory of shopData.subCategories; let subIndex = $index; track subCategory.subCategoryId) {
     <div class="shop-category mb-5">
       <h4 class="mt-4 mb-3 text-main fs-6 position-relative">{{ subCategory.subCategoryName }}</h4>
       <div class="row mt-3 g-4">
-        @for (product of subCategory.products; let prodIndex = $index; track prodIndex) {
+        @for (product of subCategory.products; track product._id) {
         <div class="col-md-4">
           <div class="card cursor-pointer h-100">
             <div class="inner position-relative">
