--- a/greenly/src/app/components/cart/cart.component.html
+++ b/greenly/src/app/components/cart/cart.component.html
@@ -8,7 +8,7 @@
                 </div>
                 @if(cartData.products.length > 0){
                     <div class="clear-cart cursor-pointer text-danger">
-                        <h3 class="fs-5">Empty Cart <i class="fa-solid fa-trash-can"></i></h3>
+                        <h3 class="fs-5" (click)="emptyCart()">Empty Cart <i class="fa-solid fa-trash-can"></i></h3>
                     </div>
                 }
             </div>
@@ -55,6 +55,10 @@
             @if (cartData.products.length > 0) {
                 <button class="btn-main ms-auto d-block rounded-3 px-5 my-3">Check Out</button>
               }
-        } 
+        }@else {
+            <h1 class="fs-1 fw-bold special-font">Shop Cart:</h1>
+            <h3 class="text-main fw-bold">Total cart price: 0</h3>
+            <h3 class="text-danger text-center special-font">No Products Added Yet!</h3>
+        }
     </div>
 </section>
